tests/valid/sized_integers/convert_i64_i32.rs
/*
executionExitCode: 10
*/

foo(): i64{
    return 10;
}

main(): i32 {
    return foo();
}